--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ div.calc-btn input:hover{
     form div label{
         font-size: 14px;
         width: 100%;
+        color: black;
+        font-weight: 600;
     }
     div span{
         font-size: 10px;
